--- a/index.html
+++ b/index.html
@@ -25,24 +25,26 @@
       <div class="container header-container">
         <nav class="navigation">
           <a class="logo link" href="./index.html" lang="en">
-            <span class="logo-item">Web</span>Studio</a
+            <span class="logo__item">Web</span>Studio</a
           >
           <ul class="list">
-            <li class="nav-item"><a class="nav-link link current" href="#">Студия</a></li>
-            <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
-            <li class="nav-item"><a class="nav-link link" href="#">Контакты</a></li>
+            <li class="nav__item"><a class="nav__link link current" href="#">Студия</a></li>
+            <li class="nav__item">
+              <a class="nav__link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav__item"><a class="nav__link link" href="#">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contact-list list">
+        <ul class="contact list">
           <li class="contact-header">
-            <a class="contact-link link" href="mailto:info@devstudio.com">
+            <a class="contact__link link" href="mailto:info@devstudio.com">
               <svg class="icon-envelope" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contact-header">
-            <a class="contact-link link" href="tel+380961111111">
+            <a class="contact__link link" href="tel+380961111111">
               <svg class="icon-smartphone" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -57,56 +59,56 @@
     <main>
       <section class="hero overlay">
         <div class="container">
-          <h1 class="title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button class="modal-btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <!-- <h2>Наши преимущества</h2>-->
       <section class="section">
         <div class="container">
-          <h2 class="visually-hidden">About us</h2>
-          <ul class="about-item list">
-            <li class="advantages">
+          <h2 class="is-hidden">About us</h2>
+          <ul class="advantages advantages__list list">
+            <li class="advantages__item">
               <div class="thumb">
                 <svg class="icon icon-antenna" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="about-us">Внимание к деталям</h3>
-              <p class="about-us-desc">
+              <h3 class="advantages_subtitle">Внимание к деталям</h3>
+              <p class="advantages__desc">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="advantages">
+            <li class="advantages__item">
               <div class="thumb">
                 <svg class="icon icon-clock" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="about-us">Пунктуальность</h3>
-              <p class="about-us-desc">
+              <h3 class="advantages_subtitle">Пунктуальность</h3>
+              <p class="advantages__desc">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="advantages">
+            <li class="advantages__item">
               <div class="thumb">
                 <svg class="icon-diagram icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="about-us">Планирование</h3>
-              <p class="about-us-desc">
+              <h3 class="advantages_subtitle">Планирование</h3>
+              <p class="advantages__desc">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="advantages">
+            <li class="advantages__item">
               <div class="thumb">
                 <svg class="icon icon-astronaut" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="about-us">Современные технологии</h3>
-              <p class="about-us-desc">
+              <h3 class="advantages_subtitle">Современные технологии</h3>
+              <p class="advantages__desc">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
@@ -392,7 +394,7 @@
           <!--Логотип компании-->
           <div class="footer-contact-wrapper">
             <a class="logo-footer link" href="#" lang="en">
-              <span class="logo-item">Web</span>Studio</a
+              <span class="logo__item">Web</span>Studio</a
             >
             <!--Контактные данные-->
 
