--- a/portfolio.html
+++ b/portfolio.html
@@ -25,26 +25,26 @@
       <div class="container header-container">
         <nav class="navigation">
           <a class="logo link" href="./index.html" lang="en">
-            <span class="logo-item">Web</span>Studio</a
+            <span class="logo__item">Web</span>Studio</a
           >
           <ul class="list">
-            <li class="nav-item"><a class="nav-link link" href="./index.html">Студия</a></li>
-            <li class="nav-item">
-              <a class="nav-link link current" href="./portfolio.html">Портфолио</a>
+            <li class="nav__item"><a class="nav__link link" href="./index.html">Студия</a></li>
+            <li class="nav__item">
+              <a class="nav__link link current" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="nav-item"><a class="nav-link link" href="#">Контакты</a></li>
+            <li class="nav__item"><a class="nav__link link" href="#">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contact-list list">
+        <ul class="contact list">
           <li class="contact-header">
-            <a class="contact-link link" href="mailto:info@devstudio.com">
+            <a class="contact__link link" href="mailto:info@devstudio.com">
               <svg class="icon-envelope" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contact-header">
-            <a class="contact-link link" href="tel+380961111111">
+            <a class="contact__link link" href="tel+380961111111">
               <svg class="icon-smartphone" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -270,7 +270,7 @@
           <!--Логотип компании-->
           <div class="footer-contact-wrapper">
             <a class="logo-footer link" href="#" lang="en">
-              <span class="logo-item">Web</span>Studio</a
+              <span class="logo__item">Web</span>Studio</a
             >
             <!--Контактные данные-->
 
